リクエストを送るフォームをnav_barに統一

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="wrapper__main">
-    <%= render partial: 'create_group_link' %>
+    <%= render partial: 'nav_bar' %>
     <div class="wrapper__main-body">
       <p class="group-wrapper__main-text">家族や友達と、買いたいものを共有しよう！</p>
     </div>
