--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -4,12 +4,12 @@
   </div>
 
   <div class="wrapper__main">
-    <%= render partial: '/groups/current_group_name' %>
+    <%= render partial: '/groups/nav_bar' %>
     <div class="wrapper__main-body">
 
       <div class="item__main-body">
         <div class="item-nav-bar">
-          <%= render partial: 'nav-bar' %>
+          <%= render partial: 'nav_bar' %>
         </div>
 
         <div class="new-item__wrapper">
