--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="wrapper__main">
-    <%= render partial: 'create_group_link' %>
+    <%= render partial: 'nav_bar' %>
     <div class="wrapper__main-body">
       
       <%= form_with model: @group, local: true do |f| %>
@@ -21,10 +21,6 @@
               </ul>
               <input name="group[user_ids][]" value=<%= member.id %> type="hidden">
             <% end %>
-          <% else %>
-            <div class="create-group__text">
-              <%= "#{current_user.nickname}さんだけのグループを作成" %>
-            </div>
           <% end %>
           </div>
 
