--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="wrapper__main">
-    <%= render partial: '/groups/create_group_link' %>
+    <%= render partial: '/groups/nav_bar' %>
     <div class="wrapper__main-body">
       
       <div class="search-user__title">
