--- a/app/views/groups/calculate_unit_price.html.erb
+++ b/app/views/groups/calculate_unit_price.html.erb
@@ -12,33 +12,31 @@
           <%= render partial: '/orders/nav_bar' %>
         </div>
 
-        <div class="order__wrapper">
-          <div class="calculate-section">
-            <div class="calculate-unit-price">
-              <div class="calculate-text">
-                一番安い商品を計算できます
-              </div>
-              <% 3.times do |index| %>
-                <div class="calculate-box">
-                  <% idx = index + 1%>
-                    <div>
-                      <%= idx %>つめの商品
-                    </div>
-                    <div class="calculate-box__price">
-                      <label for="price<%= idx %>">価格：</label>
-                      <input type="number" id="price<%= idx %>" name="price<%= idx %>" class="calculate-box__input-price">円
-                    </div>
-                    <div class="calculate-box__unit">
-                      <label for="unit<%= idx %>">個数（重さ・枚数）：</label>
-                      <input type="number" id="unit<%= idx %>" name="unit<%= idx %>" class="calculate-box__input-unit">
-                    </div>
-                    <div class="calculate-box__rexult">
-                      <label for="unit-price<%= idx %>", class="unit-price">単価：</label>
-                      <span id="unit-price<%= idx%>">価格と個数を入力(半角)</span>
-                    </div>
-                </div>
-              <% end %>
+        <div class="calculate-section">
+          <div class="calculate-unit-price">
+            <div class="calculate-title">
+              一番安い商品を計算できます
             </div>
+            <% 5.times do |index| %>
+              <div class="calculate-box">
+                <% idx = index + 1%>
+                  <div>
+                    商品<%= idx %>
+                  </div>
+                  <div class="calculate-box__field">
+                    <label for="price<%= idx %>">価格</label>
+                    <input type="number" id="price<%= idx %>" name="price<%= idx %>" autofocus="true" >円
+                  </div>
+                  <div class="calculate-box__field">
+                    <label for="unit<%= idx %>">個数（重さ・枚数）</label>
+                    <input type="number" id="unit<%= idx %>" name="unit<%= idx %>">
+                  </div>
+                  <div class="calculate-box__field">
+                    <label for="unit-price<%= idx %>", class="unit-price">単価:</label>
+                    <span id="unit-price<%= idx%>", class="calculate-text">価格と個数を入力(半角)</span>
+                  </div>
+              </div>
+            <% end %>
           </div>
         </div>
       
