--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -13,34 +13,30 @@
         </div>
 
         <div class="edit-item__wrapper">
-
-          <%# <div class="edit-item__container"> %>
           
-            <%= form_with model: @item, local: true do |f| %>
-              <div class="edit-item__form">
-              
-                <div class="edit-item__title"><%= '在庫を修正' %></div>
+          <%= form_with model: @item, local: true do |f| %>
+            <div class="edit-item__form">
+            
+              <div class="edit-item__title"><%= '在庫を修正' %></div>
 
-                <div class="edit-item__field">
-                  <%= f.label 'カテゴリを選ぶ'%>
-                  <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"edit-item__input"}) %>
-                </div>
-                
-                <div class="edit-item__field">
-                  <%= f.label '在庫メモまたは画像' %>
-                  <%= f.text_field :memo, class:"memo", placeholder:"メモを入力", class:"edit-item__input" %>
-                   <%= f.file_field :image, class:"edit-item__input" %>
-                </div>
-
-                <div class="edit-item__actions">
-                  <%= f.submit '修正', class:"edit-item__btn" %>
-                  <%= link_to '削除', item_path(@item.id), data:{turbo_method: :delete}, class:"edit-item__link" %>
-                </div>
-
+              <div class="edit-item__field">
+                <%= f.label 'カテゴリを選ぶ'%>
+                <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"edit-item__input"}) %>
               </div>
-            <% end %>
+              
+              <div class="edit-item__field">
+                <%= f.label '在庫メモまたは画像' %>
+                <%= f.text_field :memo, class:"memo", placeholder:"メモを入力", class:"edit-item__input" %>
+                  <%= f.file_field :image, class:"edit-item__input" %>
+              </div>
 
-          <%# </div> %>
+              <div class="edit-item__actions">
+                <%= f.submit '修正', class:"edit-item__btn" %>
+                <%= link_to '削除', item_path(@item.id), data:{turbo_method: :delete}, class:"edit-item__delete-btn" %>
+              </div>
+
+            </div>
+          <% end %>
           
         </div>
       
