--- a/app/assets/stylesheets/orders/index.css
+++ b/app/assets/stylesheets/orders/index.css
@@ -1,9 +1,48 @@
-.calculate-box{
-  display: flex;
+/* お買い物リスト一覧 */
+.order__content{
+  width: calc(100% / 3 - 20px);
   margin: 10px;
-  line-height: 20px;
+  padding: 15px;
+  border-radius: 10px;
+  background-color: rgb(249, 223, 238);
 }
 
-.calculate-box__field{
-  margin-left: 20px;
+.order__category, .order__priority, .order__memo{
+  margin-top: 5px;
+}
+
+.order__image{
+  width: 100%;
+  height: 180px;
+  object-fit: contain;
+  background-color: white;
+  border: double black;
+  margin: 10px 0;
+}
+
+.order__buttons{
+  display: flex;
+  justify-content: space-between;
+  padding: 0 50px;
+}
+
+.order__btn, .order__delete-btn{
+  font-family: 'BIZ UDPGothic', sans-serif;
+  text-decoration: none;
+  color: black;
+  font-size: 11px;
+  background-color: skyblue;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: solid;
+}
+
+.order__delete-btn{
+  background-color: red;
+}
+
+.order__checked{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 15px;
 }
