--- a/app/views/purchases/edit.html.erb
+++ b/app/views/purchases/edit.html.erb
@@ -1,26 +1,52 @@
-お買い物リストを修正
+<div class="wrapper">
+  <div class="wrapper__side-bar">
+    <%= render partial: '/groups/lists' %>
+  </div>
 
-<div class="items-form">
-<%= form_with model: @purchase, local: true do |f| %>
-  <div>
-  <%= f.label 'カテゴリーを選ぶ'%>
+  <div class="wrapper__main">
+    <%= render partial: '/groups/nav_bar' %>
+    <div class="wrapper__main-body">
+
+      <div class="item__main-body">
+        <div class="item-nav-bar">
+          <%= render partial: '/orders/nav_bar' %>
+        </div>
+
+        <div class="edit-order__wrapper">
+          
+          <%= form_with model: @purchase, local: true do |f| %>
+            <div class="edit-order__form">
+            
+              <div class="edit-order__title"><%= 'お買い物リストを修正' %></div>
+
+              <div class="edit-order__field">
+                <%= f.label 'カテゴリを選ぶ'%>
+                <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"edit-order__input"}) %>
+              </div>
+
+              <div class="edit-order__field">
+              <%= f.label '優先度（必須）'%>
+              <%= f.collection_select(:priority_id, Priority.all, :id, :name, {}, {class:"edit-order__input"}) %>
+              </div>
+              
+              <div class="edit-order__field">
+                <%= f.label '在庫メモまたは画像' %>
+                <%= f.text_field :memo, class:"memo", placeholder:"メモを入力", class:"edit-order__input" %>
+                  <%= f.file_field :image, class:"edit-order__input" %>
+              </div>
+
+              <div class="edit-order__actions">
+                <%= f.submit '修正', class:"edit-order__btn" %>
+                <%= link_to '削除', purchase_path(@purchase.id), data:{turbo_method: :delete}, class:"edit-order__delete-btn" %>
+              </div>
+
+            </div>
+          <% end %>
+          
+        </div>
+      
+      </div>
+
+    </div>
   </div>
-  <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"category-select"}) %>
-  <div>
-  <%= f.label '優先度（必須）'%>
-  </div>
-  <%= f.collection_select(:priority_id, Priority.all, :id, :name, {}, {class:"priority-select"}) %>
-  <div>
-  <%= f.label 'お買い物メモ（任意）'%>
-  </div>
-  <%= f.text_field :memo, class:"memo", placeholder:"(例)賞味期限は12/31" %>
-  <div>
-  <%= f.label '画像を選ぶ（任意）'%>
-  </div>
-  <%= f.file_field :image %>
-  <div>
-  <%= f.submit "修正" ,class:"edit-purchase-btn" %>
-  <%= link_to '戻る', group_orders_path(@purchase.group.id) %>
-  </div>
-<% end %>
 </div>
