--- a/app/views/groups/new_own_group.html.erb
+++ b/app/views/groups/new_own_group.html.erb
@@ -17,13 +17,7 @@
           </div>
 
           <div class="create-group__field">
-            <%= f.label 'グループ名を入力してください' %><br>
-            <%= f.text_field :name, autocomplete: "name", autofocus: true, placeholder: '(例)自分専用', class:"create-group__input" %>
-            <input name="group[user_ids][]" value=<%= current_user.id %> type="hidden">
-
-            <div class="create-group__actions">
-            <%= f.submit "グループを作成", class:"create-group__btn" %>
-            </div>
+            <%= render partial: 'input_group_name', locals:{ f: f } %>
 
           </div>
           
