--- a/app/views/purchases/edit.html.erb
+++ b/app/views/purchases/edit.html.erb
@@ -19,21 +19,7 @@
             
               <div class="edit-order__title"><%= 'お買い物リストを修正' %></div>
 
-              <div class="edit-order__field">
-                <%= f.label 'カテゴリを選ぶ'%>
-                <%= f.collection_select(:category_id, Category.all, :id, :name, {}, {class:"edit-order__input"}) %>
-              </div>
-
-              <div class="edit-order__field">
-              <%= f.label '優先度（必須）'%>
-              <%= f.collection_select(:priority_id, Priority.all, :id, :name, {}, {class:"edit-order__input"}) %>
-              </div>
-              
-              <div class="edit-order__field">
-                <%= f.label '在庫メモまたは画像' %>
-                <%= f.text_field :memo, class:"memo", placeholder:"メモを入力", class:"edit-order__input" %>
-                  <%= f.file_field :image, class:"edit-order__input" %>
-              </div>
+              <%= render partial: 'form', locals:{ f: f } %>
 
               <div class="edit-order__actions">
                 <%= f.submit '修正', class:"edit-order__btn" %>
