部分テンプレート援用部分を修正

--- a/app/views/groups/calculate_unit_price.html.erb
+++ b/app/views/groups/calculate_unit_price.html.erb
@@ -4,12 +4,12 @@
   </div>
 
   <div class="wrapper__main">
-    <%= render partial: 'nav_bar' %>
+    <%= render partial: 'nav_bar', locals:{ group: @group } %>
     <div class="wrapper__main-body">
 
       <div class="order__main-body">
         <div class="order-nav-bar">
-          <%= render partial: '/orders/nav_bar' %>
+          <%= render partial: 'orders/nav_bar', locals:{ group: @group } %>
         </div>
 
         <div class="calculate-section">
