--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -4,7 +4,7 @@
   </div>
 
   <div class="wrapper__main">
-    <%= render partial: 'nav_bar' %>
+    <%= render partial: 'nav_bar', locals:{ group: @group } %>
     <div class="wrapper__main-body">
       
       <div class="group-detail">
