--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -4,12 +4,12 @@
   </div>
 
   <div class="wrapper__main">
-    <%= render partial: '/groups/nav_bar' %>
+    <%= render partial: '/groups/nav_bar', locals:{ group: @group } %>
     <div class="wrapper__main-body">
 
       <div class="order__main-body">
         <div class="order-nav-bar">
-          <%= render partial: 'nav_bar' %>
+          <%= render partial: 'nav_bar', locals:{ group: @group } %>
         </div>
 
         <%= form_with url: "/orders/destroy_checked", method: :delete, class:"order__form", local: true do |f| %>
