--- a/app/views/purchases/edit.html.erb
+++ b/app/views/purchases/edit.html.erb
@@ -4,12 +4,12 @@
   </div>
 
   <div class="wrapper__main">
-    <%= render partial: '/groups/nav_bar' %>
+    <%= render partial: '/groups/nav_bar', locals:{ group: @group } %>
     <div class="wrapper__main-body">
 
       <div class="item__main-body">
         <div class="item-nav-bar">
-          <%= render partial: '/orders/nav_bar' %>
+          <%= render partial: '/orders/nav_bar', locals:{ group: @group } %>
         </div>
 
         <div class="edit-order__wrapper">
