itemとorderとで色を分ける修正

--- a/app/assets/stylesheets/shared/item.css
+++ b/app/assets/stylesheets/shared/item.css
@@ -9,7 +9,7 @@
 /* 在庫画面ナビバー */
 .item-nav-bar{
   line-height: 30px;
-  background-color: antiquewhite;
+  background-color: rgb(249, 223, 238);
   display: flex;
   justify-content: space-between;
   padding: 0 40px;
