--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -8,7 +8,7 @@
     <div class="wrapper__main-body">
 
       <div class="item__main-body">
-        <div class="item-nav-bar">
+        <div class="order-nav-bar">
           <%= render partial: 'nav_bar', locals:{ group: @group } %>
         </div>
 
