重複している削除ボタンを消去

--- a/app/assets/stylesheets/orders/index.css
+++ b/app/assets/stylesheets/orders/index.css
@@ -22,8 +22,7 @@
 
 .order__buttons{
   display: flex;
-  justify-content: space-between;
-  padding: 0 50px;
+  justify-content: center;
 }
 
 .order__btn, .order__delete-btn{
