--- a/app/views/groups/calculate_unit_price.html.erb
+++ b/app/views/groups/calculate_unit_price.html.erb
@@ -15,7 +15,7 @@
         <div class="calculate-section">
           <div class="calculate-unit-price">
             <div class="calculate-title">
-              商品の単価を比較できます
+              商品の単価を同時に比較できます（５つまで）
             </div>
             <% 5.times do |index| %>
               <div class="calculate-box">
