--- a/app/views/orders/_nav_bar.html.erb
+++ b/app/views/orders/_nav_bar.html.erb
@@ -4,5 +4,5 @@
 <ul class="order-nav-bar__links">
   <li><%= link_to '在庫リストへ（在庫から登録）', group_items_path(group.id), class:"order-nav-bar__link" %></li>
   <li><%= link_to '在庫にないものを登録', new_group_purchase_path(group.id), class:"order-nav-bar__link" %></li>
-  <li><%= link_to '単価を計算する', calculate_unit_price_group_path(group.id), class:"order-nav-bar__link" %></li>
+  <li><%= link_to '単価を比較する', calculate_unit_price_group_path(group.id), class:"order-nav-bar__link" %></li>
 </ul>
