--- a/app/assets/stylesheets/orders/new.css
+++ b/app/assets/stylesheets/orders/new.css
@@ -38,7 +38,7 @@
   margin-bottom: 5px;
 }
 
-.new-order__btn{
+.new-order__btn, .new-order__link{
   font-family: 'BIZ UDPGothic', sans-serif;
   text-decoration: none;
   color: black;
@@ -47,4 +47,9 @@
   padding: 5px 10px;
   border-radius: 5px;
   border: solid;
+}
+
+.new-order__link{
+  margin-bottom: 10px;
+  background-color: rgb(249, 223, 238);
 }
