--- a/app/views/items/_nav_bar.html.erb
+++ b/app/views/items/_nav_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="item-nav-bar__title">
-  <%= link_to '在庫リスト', group_items_path(group.id), class:"item-nav-bar__link" %>
+  <%= link_to '在庫リスト', group_items_path(group.id), class:"item-nav-bar__title-text" %>
 </div>
 <ul class="item-nav-bar__links">
   <li><%= link_to '在庫を登録する', new_group_item_path(group.id), class:"item-nav-bar__link" %></li>
