--- a/app/views/orders/_nav_bar.html.erb
+++ b/app/views/orders/_nav_bar.html.erb
@@ -1,5 +1,5 @@
 <div class="order-nav-bar__title">
-  <%= link_to 'お買い物リスト', group_orders_path(group.id), class:"order-nav-bar__link" %>
+  <%= link_to 'お買い物リスト', group_orders_path(group.id), class:"order-nav-bar__title-text" %>
 </div>
 <ul class="order-nav-bar__links">
   <li><%= link_to 'お買い物リスト登録', new_group_purchase_path(group.id), class:"order-nav-bar__link" %></li>
