--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       </div>
       <ul class="header__nav">
         <% if user_signed_in? %>
-          <li><%= link_to current_user.nickname, '#', class:"header__nav-username" %></li>
+          <li><%= link_to current_user.nickname, '#', class:"header__nav-link" %></li>
           <li><%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class:"header__nav-link" %></li>
         <% else %>
           <li><%= link_to '新規登録', new_user_registration_path, class:"header__nav-link" %></li>
