--- a/app/assets/stylesheets/groups/new.css
+++ b/app/assets/stylesheets/groups/new.css
@@ -6,10 +6,11 @@
   flex-direction: column;
 }
 
+/* メンバーリスト表示フォーム */
 .create-group__member-list{
   background-color: rgb(249, 223, 238);
   border-radius: 5px;
-  padding: 20px;
+  padding: 20px 30px;
   margin-bottom: 10px;
   font-size: 16px;
 }
@@ -22,10 +23,11 @@
   list-style: inside;
 }
 
+/* グループ名入力フォーム */
 .create-group__field{
   background-color: rgb(249, 223, 238);
   border-radius: 5px;
-  padding: 20px;
+  padding: 20px 30px;
   font-size: 16px;
   display: flex;
   justify-content: center;
@@ -37,13 +39,6 @@
 .create-group__input{
   font-size: 15px;
   margin-bottom: 10px;
-}
-
-.create-group__actions{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 }
 
 .create-group__btn, .create-group__return-btn{
