--- a/app/assets/stylesheets/items/edit.css
+++ b/app/assets/stylesheets/items/edit.css
@@ -1,27 +1,20 @@
-/* 在庫編集フォームを中心に持ってくる */
-.edit-item__container{
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* 編集フォームの中身を中央揃えにする */
+/* 編集フォーム外枠 */
 .edit-item__form{
   background-color: rgb(249, 223, 238);
   border-radius: 5px;
-  padding: 20px;
+  padding: 20px 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
+/* 編集フォーム内部 */
 .edit-item__title{
-  font-size: 20px;
-  margin-bottom: 15px;
   color: darkslateblue;
   text-shadow: 1px 1px 1px white;
+  font-size: 20px;
+  margin-bottom: 15px;
   font-weight: bold;
 }
 
