--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -1,4 +1,4 @@
-/* 登録フォームの中身を中央揃えにする */
+/* 登録フォーム外枠 */
 .new-item__form{
   background-color: rgb(249, 223, 238);
   border-radius: 5px;
@@ -9,11 +9,12 @@
   flex-direction: column;
 }
 
+/* 登録フォーム内側 */
 .new-item__title{
-  font-size: 20px;
-  margin-bottom: 15px;
   color: darkslateblue;
   text-shadow: 1px 1px 1px white;
+  font-size: 20px;
+  margin-bottom: 15px;
   font-weight: bold;
 }
 
